// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarDropdown Render correctly all dropdowns 1`] = `
<Fragment>
  <Text
    className="f1ldye9z"
    component="h5"
  >
    graph_filter_interval_duration
  </Text>
  <Component
    aria-label="graph_filter_interval_duration"
    ariaLabelledBy="graph_filter_interval_duration"
    className="fhxf3qu"
    id="graph_filter_interval_duration"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="1m"
    selections={60}
    toggleId="graph_filter_interval_duration-toggle"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={true}
      key="60"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60"
    >
      1m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="300"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300"
    >
      5m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="600"
    >
      10m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="1800"
    >
      30m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="3600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="3600"
    >
      1h
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="10800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10800"
    >
      3h
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="21600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="21600"
    >
      6h
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`ToolbarDropdown Render correctly all dropdowns 2`] = `
<Fragment>
  <Text
    className="f1ldye9z"
    component="h5"
  >
    metrics_filter_poll_interval
  </Text>
  <Component
    aria-label="metrics_filter_poll_interval"
    ariaLabelledBy="metrics_filter_poll_interval"
    className="fhxf3qu"
    id="metrics_filter_poll_interval"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Every 15s"
    selections={15000}
    toggleId="metrics_filter_poll_interval-toggle"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="0"
    >
      Pause
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="10000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10000"
    >
      Every 10s
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={true}
      key="15000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="15000"
    >
      Every 15s
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="30000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="30000"
    >
      Every 30s
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="60000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60000"
    >
      Every 1m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="300000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300000"
    >
      Every 5m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="900000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="900000"
    >
      Every 15m
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`ToolbarDropdown Render correctly all dropdowns 3`] = `
<Fragment>
  <Text
    className="f1ldye9z"
    component="h5"
  >
    graph_filter_layouts
  </Text>
  <Component
    aria-label="graph_filter_layouts"
    ariaLabelledBy="graph_filter_layouts"
    className="fhxf3qu"
    id="graph_filter_layouts"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    selections="cola"
    toggleId="graph_filter_layouts-toggle"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="kiali-grid"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="kiali-grid"
    >
      Grid
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="kiali-concentric"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="kiali-concentric"
    >
      Concentric
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="kiali-dagre"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="kiali-dagre"
    >
      Dagre
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`ToolbarDropdown Render dropdowns correctly with controlled values and labels 1`] = `
<Fragment>
  <Text
    className="f1ldye9z"
    component="h5"
  >
    graph_filter_interval_duration
  </Text>
  <Component
    aria-label="graph_filter_interval_duration"
    ariaLabelledBy="graph_filter_interval_duration"
    className="fhxf3qu"
    id="graph_filter_interval_duration"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="1m"
    selections={60}
    toggleId="graph_filter_interval_duration-toggle"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={true}
      key="60"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60"
    >
      1m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="300"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300"
    >
      5m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="600"
    >
      10m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="1800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="1800"
    >
      30m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="3600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="3600"
    >
      1h
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="10800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10800"
    >
      3h
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="21600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="21600"
    >
      6h
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`ToolbarDropdown Render dropdowns correctly with controlled values and labels 2`] = `
<Fragment>
  <Text
    className="f1ldye9z"
    component="h5"
  >
    metrics_filter_poll_interval
  </Text>
  <Component
    aria-label="metrics_filter_poll_interval"
    ariaLabelledBy="metrics_filter_poll_interval"
    className="fhxf3qu"
    id="metrics_filter_poll_interval"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Every 15s"
    selections={15000}
    toggleId="metrics_filter_poll_interval-toggle"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="0"
    >
      Pause
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="10000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10000"
    >
      Every 10s
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={true}
      key="15000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="15000"
    >
      Every 15s
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="30000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="30000"
    >
      Every 30s
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="60000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60000"
    >
      Every 1m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="300000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300000"
    >
      Every 5m
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="900000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="900000"
    >
      Every 15m
    </SelectOption>
  </Component>
</Fragment>
`;

exports[`ToolbarDropdown Render dropdowns correctly with controlled values and labels 3`] = `
<Fragment>
  <Text
    className="f1ldye9z"
    component="h5"
  >
    graph_filter_layouts
  </Text>
  <Component
    aria-label="graph_filter_layouts"
    ariaLabelledBy="graph_filter_layouts"
    className="fhxf3qu"
    id="graph_filter_layouts"
    isDisabled={false}
    isExpanded={false}
    onSelect={[Function]}
    onToggle={[Function]}
    selections="cola"
    toggleId="graph_filter_layouts-toggle"
  >
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="kiali-grid"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="kiali-grid"
    >
      Grid
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="kiali-concentric"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="kiali-concentric"
    >
      Concentric
    </SelectOption>
    <SelectOption
      className=""
      component="button"
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isNoResultsOption={false}
      isPlaceholder={false}
      isSelected={false}
      key="kiali-dagre"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="kiali-dagre"
    >
      Dagre
    </SelectOption>
  </Component>
</Fragment>
`;
